<resources>
    <string name="app_name">ASLearn</string>
    <string name="module_menu">Lessons</string>
    <string name="learn">Learn ASL</string>
    <string name="dictionary">ASL Dictionary</string>
    <string name="culture">History and Culture</string>
    <string name="progress">My Progress</string>
    <string name="alphabet">Alphabet</string>
    <string name="welcome">Welcome!</string>
    <string name="word">Word</string>
    <string name="numbers">Numbers</string>
    <string name="greetings">Greetings</string>
    <string name="food">Food</string>
    <string name="todo">TODO</string>
    <string name="tododo">TODO</string>
    <string name="verbs">Basic Verbs</string>
    <string name="adjectives">Basic Adjectives</string>
    <string name="directions">Giving Directions</string>
    <string name="family">Family</string>
    <string name="weather">Weather</string>
    <string name="questions">Questions</string>
    <string name="welcomeLesson">Welcome</string>
    <string name="welcomeInfo">Handshape: thumb in palm, fingers straight, palm up\n
Movement: move hand across body\n
Location: mid section"</string>
    <string name="moreInfo">More info goes here</string>
    <string name="backButtonText">Back</string>
    <string name="moreInfoButtonText">More Info</string>
    <string name="moreInfoBtn">More Info</string>
</resources>
