<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c9ddff"
    android:backgroundTint="#c9ddff"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="198dp"
        android:layout_height="64dp"
        android:layout_marginBottom="203dp"
        android:layout_marginTop="5dp"
        android:text="@string/welcome"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/learnASL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/learnASL"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:onClick="learnASL"
        android:paddingEnd="20dp"
        android:paddingStart="30dp"
        android:text="@string/learn"
        android:textAlignment="textStart"
        android:textColor="#888888"
        android:textSize="20sp"
        android:theme="@style/PrimaryFlatButton"
        app:layout_constraintBottom_toTopOf="@+id/culture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintHorizontal_weight="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/culture"
        android:layout_width="340dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:paddingEnd="20dp"
        android:paddingStart="30dp"
        android:text="@string/culture"
        android:textAlignment="textStart"
        android:textColor="#888888"
        android:textSize="20sp"
        android:theme="@style/PrimaryFlatButton"
        app:layout_constraintBottom_toTopOf="@+id/dictionary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintHorizontal_weight="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learnASL" />

    <Button
        android:id="@+id/dictionary"
        android:layout_width="340dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:paddingEnd="20dp"
        android:paddingStart="30dp"
        android:text="@string/dictionary"
        android:textAlignment="textStart"
        android:textColor="#888888"
        android:textSize="20sp"
        android:theme="@style/PrimaryFlatButton"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintHorizontal_weight="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/culture" />

    <Button
        android:id="@+id/progress"
        android:layout_width="340dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:paddingEnd="20dp"
        android:paddingStart="30dp"
        android:text="@string/progress"
        android:textAlignment="textStart"
        android:textColor="#888888"
        android:textSize="20sp"
        android:theme="@style/PrimaryFlatButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintHorizontal_weight=".70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dictionary"
        app:layout_constraintVertical_bias="1.0" />

    <VideoView
        android:id="@+id/HelloGif"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginBottom="192dp"
        android:layout_marginEnd="95dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="95dp"
        android:contentDescription="@string/tododo"
        app:layout_constraintBottom_toTopOf="@+id/learnASL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.32999998"
        app:layout_constraintVertical_chainStyle="spread" />

</android.support.constraint.ConstraintLayout>